--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "back-end",
+    "name": "backend",
     "version": "0.0.1",
-    "description": "Back-end do UniVerse",
+    "description": "Backend do UniVerse",
     "type": "commonjs",
     "devDependencies": {
         "@types/cors": "^2.8.14",
