--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "http-status-codes": "^2.3.0",
         "mysql2": "^3.6.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "0.3.17"
