--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
     "devDependencies": {
         "@types/cors": "^2.8.14",
         "@types/express": "^4.17.17",
-        "@types/node": "^16.18.48",
-        "ts-node": "10.7.0",
+        "@types/node": "^16.18.57",
+        "ts-node": "^10.7.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "4.5.2"
     },
@@ -18,11 +18,15 @@
         "http-status-codes": "^2.3.0",
         "mysql2": "^3.6.0",
         "reflect-metadata": "^0.1.13",
+        "tslib": "^2.6.2",
         "typeorm": "0.3.17"
     },
     "scripts": {
         "build": "tsc",
-        "dev:server": "ts-node-dev src/server.ts",
+        "postinstall": "npm run build",
+        "dev": "ts-node-dev src/server.ts",
+        "prestart": "npm run build",
+        "start": "ts-node dist/server.js",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
     "private": true
