--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
         "postinstall": "npm run build",
         "dev": "ts-node-dev src/server.ts",
         "prestart": "npm run build",
-        "start": "ts-node dist/server.js",
+        "start": "ts-node build/server.js",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
     "private": true
