--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
         "dev": "ts-node-dev src/server.ts",
         "prestart": "npm run build",
         "start": "ts-node build/server.js",
+        "pm2": "pm2 start build/server.js",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
     },
     "private": true
