--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build nginx": "npm install && ng build && && cp -r ./dist/frontend/* /usr/share/nginx/html/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
