Altera nome do script de build para o nginx

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build nginx": "npm install && ng build && && cp -r ./dist/frontend/* /usr/share/nginx/html/",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "nginx": "npm install && ng build && && cp -r ./dist/frontend/* /usr/share/nginx/html/"
   },
   "private": true,
   "dependencies": {
