--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,7 @@
     "dev": "ts-node-dev src/server.ts",
     "prestart": "npm run build",
     "start": "ts-node build/server.js",
-    "pm2": "npm run build && pm2 start build/server.js --watch build/",
+    "pm2": "npm install && npm run build && pm2 start build/server.js --watch build/",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "private": true
