--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/node": "^16.18.57",
+    "@types/nodemailer": "^6.4.14",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
@@ -17,6 +18,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.6.2",
     "typeorm": "0.3.17"
